@@ -636,7 +636,7 @@ INSERT INTO `piwam_data` (`id`, `key`, `value`) VALUES
 -- Mise a jour avec la r100
 --
 
-INSERT INTO  acl_module` (
+INSERT INTO  `acl_module` (
 `id` ,
 `libelle`
 )
@@ -644,7 +644,7 @@ VALUES (
 9 ,  'Piwam'
 );
 
-INSERT INTO  acl_action` (
+INSERT INTO  `acl_action` (
 `id` ,
 `acl_module_id` ,
 `libelle` ,
